--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=9090
 spring.boot.admin.client.url=http://localhost:8080
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.endpoint.logfile.external-file=log/home_automation.log
