--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
-spring.boot.admin.client.url=http://localhost:8081
+spring.boot.admin.client.url=http://ssautohome.hopto.org:8081
 spring.boot.admin.client.instance.name=HOME_AUTOMATION
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
