--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=9090
 spring.boot.admin.client.url=http://ssautohome.hopto.org:8081
 spring.boot.admin.client.instance.name=HOME_AUTOMATION
+spring.boot.admin.client.instance.prefer-ip=true
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.logfile.external-file=log/home_automation.log
