--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.boot.admin.client.password=pwd1994
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.logfile.external-file=log/home_automation.log
-management.security.enabled=false
+#management.security.enabled=true
