securing actuator endpoint alone

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=9090
 
 #Enabling Spring Security
-#spring.security.user.name=homeautomation
-#spring.security.user.password=SS1994ekm@
+spring.security.user.name=homeautomation
+spring.security.user.password=SS1994ekm@
 
 #SBA Client Properties
 spring.boot.admin.client.url=http://ssautohome.hopto.org:8081
@@ -15,11 +15,10 @@ spring.boot.admin.client.username=admin
 spring.boot.admin.client.password=pwd1994
 
 #Credentials to connect to actuator endpoints
-#spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
-#spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
+spring.boot.admin.client.instance.metadata.user.name=${spring.security.user.name}
+spring.boot.admin.client.instance.metadata.user.password=${spring.security.user.password}
 
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.logfile.external-file=log/home_automation.log
-#management.security.enabled=true
